--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -9,16 +9,17 @@ services:
      - MYSQL_ROOT_PASSWORD=$MYSQLDB_ROOT_PASSWORD
      - MYSQL_DATABASE=$MYSQLDB_DATABASE
    ports:
-     - 3306:3306
+     - $MYSQLDB_LOCAL_PORT:$MYSQLDB_DOCKER_PORT
    volumes:
      - db:/var/lib/mysql
  app:
    depends_on:
      - mysqldb
    build: ./web
+   restart: unless-stopped
    env_file: ./.env
    ports:
-     - 3000:3000
+     - $NODE_LOCAL_PORT:$NODE_DOCKER_PORT
    environment:
      - DB_HOST=mysqldb
      - DB_USER=$MYSQLDB_USER
